Add general architecture